# face_tractor_detector

./: CMakeLists.txt
include/: annotate.h  base.h  face_detetor.h  face_tracker.h  face_tractor_data.h  muct_data.h  patch_model.h  shape_model.h  util.h
res/: shape_model.ymal
src/: face_detector.cpp  face_tracker.cpp  face_tractor_data.cpp  patch_model.cpp  shape_model.cpp
src/exe/: CMakeLists.txt  annotate_main.cpp  train_patch_model.cpp  train_shape_model.cpp  visualize_annotations.cpp  visualize_shape_model.cpp
