cmake_minimum_required(VERSION 3.14)
project(face_tracker_detector)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++17 -pthread")
find_package(OpenCV 4.1.0 EXACT  REQUIRED)
find_package(GTest REQUIRED)
find_package(Eigen3 REQUIRED)
find_package(Qt5 COMPONENTS Core Gui Qml Quick Widgets Sql Xml Test REQUIRED)
include_directories( /usr/local/include/eigen3)
#add_library(face_tracker_detector SHARED library.c library.h)
include_directories(include)
add_library(ft_base SHARED src/face_tractor_data.cpp src/shape_model.cpp src/patch_model.cpp)
target_link_libraries(ft_base ${OpenCV_LIBS})
SUBDIRS(src/exe)